BO command process. API
