# message/types/ack_message.go
@@ -8,12 +8,9 @@ import (
 
 //NewAckMessage ...
 func NewAckMessage(_serial, _command string) interfaces.IMessage {
-	return &AckMessage{
-		Base: Base{
-			identity: fmt.Sprintf("geometris_%v", _serial),
-		},
-		commands: _command,
-	}
+	message := &AckMessage{commands: _command}
+	message.identity = fmt.Sprintf("geometris_%v", _serial)
+	return message
 }
 
 //AckMessage represents ack message
@@ -29,14 +26,17 @@ func (m *AckMessage) Commands() string {
 
 //Parameters ...
 func (m *AckMessage) Parameters() map[string]string {
-	rawParams := strings.Split(m.commands, ";")
+	commands := strings.ReplaceAll(m.commands, "SETPARAMS", "")
+	commands = strings.ReplaceAll(commands, "ACK", "")
+	commands = strings.Trim(commands, " ")
+	rawParams := strings.Split(commands, ";")
 	parameters := make(map[string]string)
 	for _, param := range rawParams {
 		if param == "" {
 			continue
 		}
 		keyValue := strings.Split(param, "=")
-		parameters[keyValue[0]] = keyValue[1]
+		parameters[keyValue[0]] = param
 	}
 	return parameters
 }
